Ensure sidebar content doesn't push Footer offscreen, esp. Firefox [Fixes #141813825]

--- a/src/components/Workspace/Workspace.scss
+++ b/src/components/Workspace/Workspace.scss
@@ -39,6 +39,7 @@
 // Allow the workspace to fill the full height of App
 .Workspace {
   background-color: $zorroa-nearwhite;
+  overflow: hidden;
 
   & .Workspace-vertical-separator {
     height: 100%;
